--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="wrapper">
 
         <p class="text">GITHAB...</p>
+        <p class="text">test commit with a smart-phone... 
 
     </div>
 </body>
